--- a/.github/workflows/pull_request_common.yml
+++ b/.github/workflows/pull_request_common.yml
@@ -57,9 +57,7 @@ jobs:
 
       - name: Check if PR updates relevant dependencies
         id: check_deps
-        if: ${{ steps.metadata.outputs.directory == 'packages/vkui' }}
         run: |
-
           # ```sh
           # @npmcli/template-oss, @octokit/rest
           # ```
@@ -68,14 +66,27 @@ jobs:
           # @npmcli/template-oss @octokit/rest
           # ```
           UPDATED_DEPS=$(echo ${{ steps.metadata.outputs.dependency-names }} | sed "s/,/ /g")
-          RELEVANT_DEPS=${{ steps.dependencies.outputs.value }}
 
-          for UPDATED_DEP in $UPDATED_DEPS; do
-            if [[ $RELEVANT_DEPS =~ $UPDATED_DEP ]]; then
+          if [[ "${{ steps.metadata.outputs.directory }}" == '/' ]]; then
+            VKUI_TOKENS_DEPENDENCY='@vkontakte/vkui-tokens'
+            if [[ $UPDATED_DEPS =~ $VKUI_TOKENS_DEPENDENCY ]]; then
               echo "update_needed=true" >> $GITHUB_OUTPUT
-              exit 0
             fi
-          done
+            exit 0
+          fi
+
+          if [[ "${{ steps.metadata.outputs.directory }}" == 'packages/vkui' ]]; then
+            DEPENDENCIES_OBJECT=$(node -p "require('./packages/vkui/package.json').dependencies")
+            DEPENDENCIES_ARRAY=$(node -p "Object.keys($DEPENDENCIES_OBJECT)")
+            RELEVANT_DEPS=$(node -p "JSON.stringify($DEPENDENCIES_ARRAY)")
+
+            for UPDATED_DEP in $UPDATED_DEPS; do
+              if [[ $RELEVANT_DEPS =~ $UPDATED_DEP ]]; then
+                echo "update_needed=true" >> $GITHUB_OUTPUT
+                exit 0
+              fi
+            done
+          fi
 
       - name: Add milestone to PR
         if: ${{ !cancelled() && steps.check_deps.outputs.update_needed == 'true' }}
